# ALIKE-cpp

./: .gitignore  CMakeLists.txt
include/: simple_tracker.hpp
src/: create_voc.cpp  main.cpp
